src/app.scss
/* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */ /* Import only what you need from Bulma */
@import "bulma/sass/utilities/_all";
@import "bulma/sass/base/_all";
@import "bulma/sass/elements/_all";
// @import "bulma/sass/form/_all";
@import "bulma/sass/components/_all";
@import "bulma/sass/grid/_all";
@import "bulma/sass/helpers/_all";
@import "bulma/sass/layout/_all";

@import "bulma-switch/src/sass/index.sass";

.darkened {
  filter: brightness(50%)
}

.clickable-lists li {
  @extend .pb-2,
}

.columns>.column>* {
  max-height: 100%;
  height: 100%;
}

